SPA can now pull from API and display data on the homepage

--- a/spa/index.html
+++ b/spa/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<aside class="hidden"><p></p></aside>
 		<header>
-			<h1>Single Page App</h1>
+			<h1>E-Learning</h1>
 			<p>&nbsp;</p>
 		</header>
 		<nav>
@@ -56,10 +56,13 @@
 			<p><button type="submit">Upload</button></p>
 		</form>
 	</template>
-	<template id="quote">
+	<template id="contentTemplate">
 		<section>
 			<h2></h2>
-			<p></p>
+			<p id="date"></p>
+			<p id="teacherName"></p>
+			<p id="statusIndicator"></p>
+			<p id="viewContent">View Content</p>
 		</section>
 	</template>
 </html>
