the front end now renders homepage for student and teacher depending on userType variable

--- a/spa/index.html
+++ b/spa/index.html
@@ -59,9 +59,10 @@
 	<template id="contentPreviewTemplate">
 		<section>
 			<h2></h2>
-			<p id="date"></p>
-			<p id="teacherName"></p>
-			<p id="statusIndicator"></p>
+			<p id="one"></p>
+			<p id="two"></p>
+			<p id="three"></p>
+			<p id="four"></p>
 			<p><a id="viewContent">View Content</a></p>
 		</section>
 	</template>
