can now click link to specific page

--- a/spa/index.html
+++ b/spa/index.html
@@ -46,6 +46,14 @@
 			<p><button type="submit">Create account</button></p>
 		</form>
 	</template>
+	<template id="createContentTemplate">
+		<form name="register">
+			<p><label for="title">Content title</label><br /><input type="text" name="user" placeholder="full name" /></p>
+			<p><label for="text">Text</label><br /><input type="password" name="pass" placeholder="password" /></p>
+			<p><label for="image">Image</label><br /><input type="file" id="pictureInput" name="picture" multiple /></p>
+			<p><button type="submit">Create content</button></p>
+		</form>
+	</template>
 	<template id="logout">
 			<p>Do you want to log out?</p>
 			<p><button>OK</button><button>Cancel</button></p>
