jwt integrated with front spa login system

--- a/spa/index.html
+++ b/spa/index.html
@@ -76,7 +76,7 @@
 	</template>
 	<template id="contentTemplate">
 		<section>
-			<h2 id=title></h2>
+			<h2 id="title"></h2>
 			<p id="text"></p>
 			<select id="test" multiple>
   				<option value="one" id="one">one</option>
