--- a/spa/index.html
+++ b/spa/index.html
@@ -53,8 +53,9 @@
 	<template id="uploadContent">
 		<form name="uploadContent" method="post">
 			<p><label for="title">Content title</label><br /><input type="text" name="title"/></p>
+			<p>Content</p>
 			<textarea name="text"></textarea>
-			<p><label for="image">Image</label><br /><input type="file" id="imageUrl" name="imageUrl" multiple /></p>
+			<p><label for="image">Image (optional)</label><br /><input type="file" id="imageUrl" name="imageUrl" multiple /></p>
 			<p><button type="submit">Create content</button></p>
 		</form>
 	</template>
@@ -99,21 +100,24 @@
 			<p id="teacherName"></p>
 		</section>
 	</template>
+
 	<template id="contentTemplateQuestion">
 		<section>
 			<h2 id="title"></h2>
 			<pre id="text"></pre>
 			<img id="image"></img><br/>
 			<form id="test" method="post">
-  				<input type=radio value="one" id="one"><p value="one" id="one">one</p></input>
-  				<input type=radio value="two" id="two"><p value="two" id="two">two</p></input>
-  				<input type=radio value="three" id="three"><p value="three" id="three">three</p></input>
-				<input type=radio value="four" id="four"><p value="four" id="four">four</p></input>
-				<button type="submit">Submit Answer</button>
+  				<input type=radio value="one" name="test" id="one"><p value="one" id="one">one</p></input>
+  				<input type=radio value="two" name="test" id="two"><p value="two" id="two">two</p></input>
+  				<input type=radio value="three" name="test" id="three"><p value="three" id="three">three</p></input>
+				<input type=radio value="four" name="test" id="four"><p value="four" id="four">four</p></input>
+				<button id="testButton" type="submit">Submit Answer</button>
 			</form>
+			<p id="qOutput" name="qOutput" value="qOutput"></p>
 			<p id="teacherName"></p>
 		</section>
 	</template>
+
 	<template id="contentTemplateQuestionTeacher">
 		<section>
 			<h2 id="title"></h2>
